--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 body{
     color: white;
     background-color: black;
+    grid-template-columns: auto auto auto;
+    display: grid;
+}
+
+#gameWindow{
+    width: 800px;
+    height: 592px;
+    grid-column-start: 2;
+    background-color: blue;
 }
