--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,6 @@ body{
 .character{
     position: absolute;
     z-index: 100;
-    transition: all 1.5s ease-in-out;
     scale: 1.5;
 }
 
@@ -45,4 +44,29 @@ body{
 #MainCharacter{
     top: 400px;
     left: 550px;
+    transition: all 1.5s ease-in-out;
+}
+
+.waters {
+    background-color: antiquewhite;
+    z-index: 1;
+    position: absolute;
+}
+
+#water1 {
+    width: 100;
+    height: 100;
+    margin: 50;
+}
+
+#water2 {
+
+}
+
+#water3 {
+
+}
+
+#water4 {
+
 }
