--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,181 @@
-body{
-    color: white;
-    background-color: black;
-    grid-template-columns: auto 800px auto;
-    grid-template-rows: auto auto;
+body {
     display: grid;
+    grid-template-columns: auto 800px auto;
+    grid-template-rows: auto 608px auto;
+    gap: 20px;
+    margin: 0px;
+    font-family: 'Oxygen', sans-serif;
+    background-color: #000;
 }
 
-#mainTitle{
-    grid-row-start: 1;
+h1 {
+    font-family: 'Shrikhand', cursive;
+    font-weight: normal;
+    color: #FFF;
+}
+
+p {
+    margin: 0px;
+}
+
+#title {
     grid-column-start: 2;
+    grid-row-start: 1;
     text-align: center;
 }
 
-#gameWindow{
-    position: relative;
-    width: 800px;
-    height: 592px;
+#mainTitle {
     grid-column-start: 2;
-    background-color: rgb(0, 0, 255);
-    grid-row-start: 2;
+    grid-row-start: 1;
+    text-align: center;
 }
 
-.background{
+#gameWindow {
+    position: relative;
+    width: 800px;
+    height: 608px;
+    grid-column-start: 2;
+    grid-row-start: 2;
+    background-color: blue;
+    transition: all 1s ease-in-out;
+}
+
+#tilemap {}
+
+#mainCharacter {
+    top: 160px;
+    left: 392px;
+    transition: all 1s ease-in-out;
+    scale: 1.5;
+}
+
+#door1 {
+    top: 287px;
+    left: 177px;
+    width: 32px;
+    height: 64px;
+
+}
+
+#door2 {
+    top: 64px;
+    left: 496px;
+    width: 32px;
+    height: 64px;
+}
+
+#statue {
+    top: 287px;
+    left: 703px;
+    width: 32px;
+    height: 64px;
+}
+
+#grave {
+    top: 482px;
+    left: 257px;
+    width: 32px;
+    height: 64px;
+}
+
+#tree1 {
+    top: 400px;
+    left: 667px;
+}
+
+#signToLeft {
+    top: 351px;
+    left: 450px;
+    width: 32px;
+    height: 32px;
+}
+
+#platform {
+    top: 193px;
+    left: 416px;
+}
+
+#dialogBar {
+    bottom: 0px;
+}
+
+#setMainDialog {
+    position: relative;
+    height: 64px;
+    width: 800px;
+}
+
+#brownBar {
+    position: absolute;
+    height: 32px;
+    width: 800px;
+    background-color: #442c1c;
+    bottom: 0px;
+}
+
+#hero {
+    left: 15px;
+    bottom: 0px;
+    scale: 6;
+}
+
+#mainCharacterSpeech {
+    left: 64px;
+    top: 0px;
+}
+
+#counterCharacter {
+    right: 0px;
+    bottom: 0px;
+    opacity: 0;
+    transition: all 1s ease-in-out;
+}
+
+#counterSpeech {
+    right: 64px;
+    top: 0px;
+}
+
+#invetoryBox {
+    left: 582px;
+    top: 10px;
+    width: 180px;
+    height: 80px;
+    color: #FFF;
+    background-color: #442c1c;
+    border: #FFF 1px solid;
+    padding: 10px;
+}
+
+#invetoryBox ul {
+    list-style-type: square;
+    margin: 0px 14px;
+    padding: 0px;
+    font-size: 12px;
+}
+
+.background {
     position: absolute;
     z-index: 0;
 }
 
-.character{
+.character {
     position: absolute;
     z-index: 100;
-    scale: 1.5;
 }
 
-.foreground{
+.foreground {
     position: absolute;
     z-index: 1000;
 }
 
-#tilemap{
-    
-}
-
-#MainCharacter{
-    top: 400px;
-    left: 550px;
-    transition: all 1.5s ease-in-out;
-}
-
-.waters {
-    background-color: antiquewhite;
-    z-index: 1;
-    position: absolute;
-}
-
-#water1 {
-    width: 100;
-    height: 100;
-    margin: 50;
-}
-
-#water2 {
-
-}
-
-#water3 {
-
-}
-
-#water4 {
-
+.speech-bubble {
+    background: #ffffff;
+    border-radius: 60px;
+    color: #000;
+    padding: 5px 5px 5px 20px;
+    font-size: 12px;
+    opacity: 0;
+    width: 300px;
+    transition: all 1s ease-in-out;
 }
